# indexer

./: .gitignore  Cargo.toml  build.sh  index.html  readme.md
.github/workflows/: rust.yml
docs/: goodbye.txt  hello.txt
src/: html.rs  lexer.rs  lib.rs  main.rs  models.rs  parsers.rs  server.rs  tree.rs
