[package]
name = "indexer"
description = "An vector space based search engine for local directories"
version = "0.1.0"
edition = "2021"
authors = ["Juan Milkah <juanmilkah@gmail.com>"]
license = "GNU/GPL3"

[dependencies]
anyhow = "1.0.97"
bincode = "1.3.3"
clap = { version = "4.5.30", features = ["derive"] }
home = "0.5.11"
html5ever = "0.29.1"
poppler = "0.6.0"
rayon = "1.10.0"
rust-stemmers = "1.2.0"
rustc-hash = "2.1.1"
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
stop-words = "0.8.1"
tiny_http = "0.11.0"
xml = "0.8.20"
