[package]
name = "indexer"
description = "A search engine for local directories"
version = "0.2.0"
edition = "2021"
authors = ["Juan Milkah <juanmilkah@gmail.com>"]
license = "GNU/GPL3"

[dependencies]
anyhow = "1.0.97"
bincode2 = "2.0.1"
clap = { version = "4.5.30", features = ["derive"] }
csv = "1.3.1"
home = "0.5.11"
html5ever = "0.29.1"
indicatif = "0.17.11"
lopdf = "0.36.0"
rayon = "1.10.0"
rust-stemmers = "1.2.0"
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
stop-words = "0.8.1"
tendril = "0.4.3"
tiny_http = "0.11.0"
xml = "0.8.20"

# Optimizations heavily borrow from this blog
# https://deterministic.space/high-performance-rust.html
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = true
